--- a/more-content.css
+++ b/more-content.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-  background: url('BensBestBytesLogo.jpg') no-repeat center center;
+  background: url('images/BensBestBytesLogo.jpg') no-repeat center center;
   background-size: 120% 160%;
   background-repeat: no-repeat;
   background-position: center center;
